Preparation for version 1.0 Added cache support Easier CMake configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 3.4)
 project(find_face_landmarks)
 
+# Set version
+set(FFL_MAJOR_VERSION 0)
+set(FFL_MINOR_VERSION 9)
+set(FIND_FACE_LANDMARKS_VERSION ${FFL_MAJOR_VERSION}.${FFL_MINOR_VERSION})
+
 # Global configurations
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
 if(UNIX)
@@ -9,31 +14,121 @@ else()
 	 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNOMINMAX")
 endif()
 
+# Optional 3rd party components
+# ===================================================
+option(WITH_VSAL "Video Stream Abstraction Layer" ON)
+option(WITH_PROTOBUF "Protocol Buffers - Google's data interchange format" ON)
+
+# Build components
+# ===================================================
+option(BUILD_CACHE_FACE_LANDMARKS "Build cache_face_landmarks application" ON)
+option(BUILD_FACE_LANDMARKS_VIEWER "Build face_landmarks_viewer application" ON)
+option(BUILD_DOCS "Build documentation using Doxygen" ON)
+option(BUILD_INTERFACE_MATLAB "Build interface for Matlab" ON)
+
 # Find dependencies
 # ===================================================
 find_package(OpenCV REQUIRED highgui imgproc imgcodecs)
-find_package(vsal REQUIRED)
 find_package(dlib REQUIRED)
-find_package(Matlab REQUIRED MX_LIBRARY)
 
-# Add mex target
-# ===================================================
-include_directories(${OpenCV_INCLUDE_DIRS} ${VSAL_INCLUDE_DIRS} ${dlib_INCLUDE_DIRS} ${Matlab_INCLUDE_DIRS})
-matlab_add_mex(NAME find_face_landmarks
-	SRC find_face_landmarks_mex.cpp find_face_landmarks.h find_face_landmarks.cpp MxArray.hpp MxArray.cpp
-	DOCUMENTATION ${CMAKE_SOURCE_DIR}/find_face_landmarks.txt)
-target_link_libraries(find_face_landmarks ${OpenCV_LIBS} ${VSAL_LIBRARIES} ${dlib_LIBRARIES} ${Matlab_LIBRARIES})
-#install(TARGETS find_face_landmarks EXPORT find_face_landmarks-targets DESTINATION mex COMPONENT mex)
-if(MSVC)
-  INSTALL(TARGETS find_face_landmarks
-    LIBRARY DESTINATION lib COMPONENT mex
-    RUNTIME DESTINATION mex COMPONENT mex)
-else()
-  INSTALL(TARGETS find_face_landmarks
-    LIBRARY DESTINATION mex COMPONENT mex
-    RUNTIME DESTINATION bin COMPONENT mex)
+# Boost
+if(WIN32)
+	set(Boost_USE_STATIC_LIBS ON)	# only find static libs
+endif(WIN32)
+set(Boost_USE_MULTITHREADED ON)
+find_package(Boost COMPONENTS filesystem program_options)
+
+# vsal
+if(WITH_VSAL)
+	find_package(vsal)
+	if(NOT vsal_FOUND)
+		set(WITH_VSAL OFF CACHE BOOL "Video Stream Abstraction Layer" FORCE)	
+	endif()
 endif()
+
+# protobuf
+if(WITH_PROTOBUF)
+	find_package(protobuf)
+	if(NOT PROTOBUF_FOUND)
+		set(WITH_PROTOBUF OFF CACHE BOOL "Protocol Buffers - Google's data interchange format" FORCE)	
+	endif()
+endif()
+
+# Docs
+if(BUILD_DOCS)
+	find_package(Doxygen)
+	if(NOT DOXYGEN_FOUND)
+		message(STATUS "The documentation won't be build.")
+		set(BUILD_DOCS OFF CACHE BOOL "Build documentation using Doxygen" FORCE)
+	endif()
+endif()
+
+# Interfaces
+if(NOT WITH_VSAL)
+	message(STATUS "Matlab interface won't be build because it depends on vsal.")
+	set(BUILD_INTERFACE_MATLAB OFF CACHE BOOL "Build interface for Matlab" FORCE)
+endif()
+if(BUILD_INTERFACE_MATLAB)
+	find_package(Matlab COMPONENTS MX_LIBRARY)
+	if(NOT Matlab_FOUND)
+		message(STATUS "Matlab interface won't be build.")
+		set(BUILD_INTERFACE_MATLAB OFF CACHE BOOL "Build interface for Matlab" FORCE)	
+	endif()
+endif()
+
+# Add subdirectories
+# ===================================================
+add_subdirectory(sequence_face_landmarks)
+set(FFL_TARGETS sequence_face_landmarks)
+
+# cache_face_landmarks
+if(BUILD_CACHE_FACE_LANDMARKS)
+	add_subdirectory(cache_face_landmarks)
+	set(FFL_TARGETS ${FFL_TARGETS} cache_face_landmarks)
+endif()
+
+# face_landmarks_viewer
+if(BUILD_FACE_LANDMARKS_VIEWER)
+	add_subdirectory(face_landmarks_viewer)
+	set(FFL_TARGETS ${FFL_TARGETS} face_landmarks_viewer)
+endif()
+
+if(BUILD_DOCS)
+	add_subdirectory(doc)
+endif()
+
+# interfaces
+if(BUILD_INTERFACE_MATLAB)
+	add_subdirectory(interfaces/matlab)
+endif()
+
+# Export configuration
+# ===================================================
+
+# Add all targets to the build-tree export set
+export(TARGETS ${FFL_TARGETS}
+  FILE "${PROJECT_BINARY_DIR}/find_face_landmarks-targets.cmake")
+  
+# Export the package for use from the build-tree
+# (this registers the build-tree with a global CMake-registry)
+export(PACKAGE find_face_landmarks)
 	 
-install(FILES ${CMAKE_SOURCE_DIR}/find_face_landmarks.txt DESTINATION mex COMPONENT mex RENAME find_face_landmarks.m)
-install(FILES ${CMAKE_SOURCE_DIR}/show_face_landmarks.m DESTINATION utilities COMPONENT utilities)
-install(FILES ${CMAKE_SOURCE_DIR}/find_face_landmarks_setup.m DESTINATION .)
+# Create config files
+configure_file(cmake/find_face_landmarks-config.cmake.in
+  "${PROJECT_BINARY_DIR}/find_face_landmarks-config.cmake" @ONLY)
+configure_file(cmake/find_face_landmarks-config-version.cmake.in
+  "${PROJECT_BINARY_DIR}/find_face_landmarks-config-version.cmake" @ONLY)
+  
+# Install config files
+install(FILES
+  "${PROJECT_BINARY_DIR}/find_face_landmarks-config.cmake"
+  "${PROJECT_BINARY_DIR}/find_face_landmarks-config-version.cmake"
+  DESTINATION "cmake" COMPONENT dev)
+  
+# Install the export set for use with the install-tree
+install(EXPORT find_face_landmarks-targets DESTINATION cmake COMPONENT dev)
+  
+  
+#install(FILES ${CMAKE_SOURCE_DIR}/find_face_landmarks.txt DESTINATION mex COMPONENT mex RENAME find_face_landmarks.m)
+#install(FILES ${CMAKE_SOURCE_DIR}/show_face_landmarks.m DESTINATION utilities COMPONENT utilities)
+#install(FILES ${CMAKE_SOURCE_DIR}/find_face_landmarks_setup.m DESTINATION .)
