Changed CMake scripts to be a little more convenient

--- a/face_landmarks_viewer/CMakeLists.txt
+++ b/face_landmarks_viewer/CMakeLists.txt
@@ -1,14 +1,14 @@
 # Validation
 if(NOT Boost_FOUND)
-	message(STATUS "cache_face_landmarks won't be build because Boost is missing.")
+	message(STATUS "face_landmarks_viewer won't be built because Boost is missing.")
 	return()
 endif()
-if(NOT WITH_VSAL)
-	message(STATUS "cache_face_landmarks won't be build because vsal is missing.")
+if(NOT vsal_FOUND)
+	message(STATUS "face_landmarks_viewer won't be built because vsal is missing.")
 	return()
 endif()
-if(NOT WITH_PROTOBUF)
-	message(STATUS "cache_face_landmarks won't be build because protobuf is missing.")
+if(NOT PROTOBUF_FOUND)
+	message(STATUS "face_landmarks_viewer won't be built because protobuf is missing.")
 	return()
 endif()
 
